update (SD-MW)